파라미터 인식 오류 해결

--- a/src/main/resources/templates/chat/roomin.html
+++ b/src/main/resources/templates/chat/roomin.html
@@ -157,7 +157,7 @@
 <div id="main-content">
   <form id="chat-form">
     <div class="send-area">
-      <label for="name">내용</label>
+      <label>내용</label>
       <input type="text" id="message" placeholder="메시지 내용">
 
       <button id="send" type="submit" class="btn btn-4">Send</button>
